--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -89,6 +89,7 @@
   "active": "df501eaf64a471ac",
   "lastOpenFiles": [
     "README.md",
+    "src/Robotics 1.md",
     "Untitled.md",
     "src/Death.md",
     "src/Design and Development Principles.md",
@@ -96,7 +97,6 @@
     "Grand Strategy.md",
     "src/Rust.md",
     "Untitled 1.md",
-    "Software Engineering/Networking, Security, and Protocols.md",
-    "Software Engineering/Untitled.md"
+    "Software Engineering/Networking, Security, and Protocols.md"
   ]
 }
